Partial fixes: grid expanding & uploading to viewers
Expanding the grid via the "Control Panel" now mostly works.
Now able to access functions inside the Webix defined iframes with
$$('object id').getWindow().method().  However, it is running into the
same browser compatibility problems as when doing this with HTML
iframes.

Known Bugs:
1) With large grids, a row will sometimes be skipped when adding
columns.
2) Chrome won't accept uploads to iframes when just running Hydra
locally.  Origins for the primary frame and iframe are both "null" ->
same origin violation.
3) IE won't display the compound (CTX) that viewers are set to display
by default.  Uploaded files get displayed strangely and most viewer
controls don't work.

ToDo:
Fix the above bugs
Allow grid downsizing
Allow a file to be uploaded to a selected viewer

Misc:
If the mouse is being used for compound manipulation and is moved
outside the viewer before release, the viewer will continue interacting
with the mouse whenever cursor is in its bounds until the viewer is
clicked again.  Consider making a global mouse state variable in the
future?

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 		// script modified from http://www.amcharts.com/tutorials/loading-external-data/
 		function loadCSV(file) {
 			//webix.message(file);
-			webix.message("hi");
+			webix.message("loadCSV");
 		    var request;
 		    if (window.XMLHttpRequest) {
 		        // IE7+, Firefox, Chrome, Opera, Safari
@@ -211,11 +211,11 @@
 					// middle column contains central workspace with all of the visualization object
 					{id:"workspace", view:"scrollview", container:"central_workspace",type:"line",
 					scroll:"xy", //Enables horizontal (x) and vertical (y) scrolling
-					body:{id:"workRows", rows:[{
+					body:{id:"workLayout", rows:[{
 						/*template:"html->mastergrid",
 						id:"master_grid",
 						type:"line",*/
-						id:"workCols"+"0",cols:[{
+						id:"workRow"+"0",cols:[{
 								view:"iframe",
 								id:"viewer"+"0"+","+"0",
 								src:"viewer.html",
@@ -298,9 +298,8 @@
 						//webix.message(reader.result);
 						$$('comp_table').add(reader.result); //add data to table
 						//hydraUI.parse(fileData, 'csv'); //load data into table
-						//glmol.loadMolecule();
-						//$$('file_dump').setValue(reader.result);　//temp: dump reader results into a txtarea
-						//document.getElementById('viewer').contentWindow.loadFile(reader.result);
+						
+						$$('viewer0,0').getWindow().loadFile(reader.result);
 						
 					};
 					reader.onerror = function(e) {
