--- a/viewer.html
+++ b/viewer.html
@@ -213,6 +213,7 @@
       
       function loadFile(file) {
          //var file = $('#glmol01_file').get(0);
+         console.log("loadFile STARTED NOOOOOOOOOOOOOOOWWWWWWWWWWWWWWWWWWWWWWWWWWWW");
          
          if (file) {
             //file = file.files;
