Primitive Upload Control & ID algorithm fix
-Added primitive controls for controlling where the most recently
  uploaded file is displayed
  --Created "Upload to Viewer" panel above "Import Compounds"
-Fixed system for assigning ID's
  --Previously was the source of bugs when the grid was resized
     more than once.  Consequently affected uploading
-Currently have code for displaying coordinates in iframes
  commented out
-Swapped the positions of "Columns" and "Rows" in the control panel
  --More intuitive given that coordinates are (x,y) -> (column, row)

Known Bugs:
1) Chrome won't accept uploads to iframes when just running Hydra
locally.  Origins for the primary frame and iframe are both "null"
-> same origin violation.
-This actually works now? Possibly due to a Chrome update.
2) Chrome and Firefox won't display more than 16-17 molecular
models even though the viewers themselves are still responsive.
  - "Error: WebGL: Exceeded 16 live WebGL contexts for this
     principal, losing the least recently used one."
  - This is due to limitations built into Three49custom.js

To Do:
- Show Webix ID/grid coordinates in each viewer's frame
- Improve controls for uploading files to viewers
  -- Replace primitive controls with a file list + controls
  -- Try implementing drag-and-drop
- Investigate mysterious resolving of bug #1
- Remove "Dock File" box
- Add padding between cells for easier scrolling on Macs
- Pull mouse mode setting (eg "Rotate", "Translate", etc)
  out of viewers. Universal control in Hydra GUI
- Replace "ID" in "Compound List" with coordinates

Misc (from before):
If the mouse is being used for compound manipulation and is moved
outside the viewer before release, the viewer will continue interacting
with the mouse whenever cursor is in its bounds until the viewer is
clicked again.  Consider making a global mouse state variable in the
future?

--- a/viewer.html
+++ b/viewer.html
@@ -191,7 +191,7 @@
       
       function loadFile(file) {
          //var file = $('#glmol01_file').get(0);
-         
+         console.log('                         loading file');
          if (file) {
             //file = file.files;
          }
