Coordinate Display, Re-indexed Coordinates, & Misc Cleanup
- Fixed coordinate display
  -- Had to use a callback function in the onAfterLoad event
- Changed indexing of viewers so that coordinates start at 1
- Commented out the box that contained "Dock File" & "Ligand File"
- Removed now extraneous comments and commented out code

Known Bugs:
1) Chrome won't accept uploads to iframes when just running Hydra
locally.  Origins for the primary frame and iframe are both "null"
-> same origin violation.
-This actually works now? Possibly due to a Chrome update.
2) Chrome and Firefox won't display more than 16-17 molecular
models even though the viewers themselves are still responsive.
- "Error: WebGL: Exceeded 16 live WebGL contexts for this
principal, losing the least recently used one."
- This is due to limitations built into Three49custom.js

To Do:
- Improve controls for uploading files to viewers
-- Replace primitive controls with a file list + controls
-- Try implementing drag-and-drop
- Investigate mysterious resolving of bug #1
- Add padding between cells for easier scrolling on Macs
- Pull mouse mode setting (eg "Rotate", "Translate", etc)
out of viewers. Universal control in Hydra GUI
- Replace "ID" in "Compound List" with coordinates

Misc (from before):
If the mouse is being used for compound manipulation and is moved
outside the viewer before release, the viewer will continue interacting
with the mouse whenever cursor is in its bounds until the viewer is
clicked again.  Consider making a global mouse state variable in the
future?

--- a/index.html
+++ b/index.html
@@ -153,10 +153,10 @@
 							{header:"Upload to Viewer", maxWidth:250, collapsed:false, body:
 								{id:'upload_controller', view:'form', elements:[
 									{ //column index to upload to
-										view:'text', value:'0', label:'Column', name:'uploadCol',
+										view:'text', value:'1', label:'Column', name:'uploadCol',
 									},
 									{ //row index to upload to
-										view:'text', value:'0', label:'Row', name:'uploadRow',
+										view:'text', value:'1', label:'Row', name:'uploadRow',
 									}
 								]}
 							},
@@ -201,7 +201,7 @@
 									{
 										view:"text",value:"1",label:"Rows:",name:"numRow",//specifies rows count
 									},
-									{	// NOTE: feature not yet implemented --> dropdown menu to select the ID for each of the viewers in the central grid, as defined in the grid_dim form above; via this drop down menu, we can set and specify the docking file and legand to be shown in each viewer
+									/*{	// NOTE: feature not yet implemented --> dropdown menu to select the ID for each of the viewers in the central grid, as defined in the grid_dim form above; via this drop down menu, we can set and specify the docking file and legand to be shown in each viewer
 										view:"form", type:"space", rows:[
 											{
 												view:"text",label:"Dock File:", id:"dock11var",
@@ -209,7 +209,7 @@
 											{
 												view:"text",label:"Ligand File", id:"lig11var", 
 											},
-									]},
+									]},*/
 									{
 										view:"button",id:"update_grid",value:"Update Grid",inputWidth:"150",align:"center",
 										on:{
@@ -231,15 +231,14 @@
 					//Viewers start at index of 0 with coordinates (x,y)
 					//Eg "viewer1,0" is in the first row, second column from the left
 					body:{id:"workLayout", rows:[{
-						id:"workRow"+"0",cols:[{
+						id:"workRow"+"1",cols:[{
 							view:"iframe",
-							id:"viewer"+"0"+","+"0",
+							id:"viewer"+"1"+","+"1",
 							src:"viewer.html",
 							minWidth:250,minHeight:250,
 							on:{
 								'onAfterLoad':function(){
-									console.log(this.height);
-									this.getWindow().setGridCoordinates('0,0');
+									this.getWindow().setGridCoordinates('1,1');
 								}
 							}
 						}]
