Data Loading & Deleting Improvements
- Deleting a compound now clears the relevant viewers
- Changing viewers for an item now clears the old viewer
- Compound/item will only get reloaded if its new coordinates
   differ from the last ones.  (Changing coordinates then
   changing them back no longer refreshes)
   -- uploadTable now stores coordinates, not a boolean
   -- Commented out onAfterEditStop event fxn
- Code from toUploadTable moved to onAfterFileAdd event fxn
- Items in uploadTable can now be dragged to reorder

Known Bugs:
1) Expanding the "Import Compounds" beyond table limit causes
    elements in pane below to get obscured (amount depends on
how much the table has been expanded beyond the height limit)
2) Chrome won't accept uploads to iframes when just running Hydra
    locally.  Origins for the primary frame and iframe are both "null"
  -> same origin violation.
3) Chrome and Firefox won't display more than 16-17 molecular
    models even though the viewers themselves are still responsive.
  - "Error: WebGL: Exceeded 16 live WebGL contexts for this
    principal, losing the least recently used one."
  - This is due to limitations built into Three49custom.js

To Do:
- Bug fixes
- Continue to look into drag-and-drop
- Pull mouse mode setting (eg "Rotate", "Translate", etc)
  out of viewers. Universal control in Hydra GUI
- Replace "ID" in "Compound List" with coordinates

Misc (from before):
If the mouse is being used for compound manipulation and is moved
outside the viewer before release, the viewer will continue interacting
with the mouse whenever cursor is in its bounds until the viewer is
clicked again.  Consider making a global mouse state variable in the
future?

--- a/viewer.html
+++ b/viewer.html
@@ -189,13 +189,10 @@
          );
       }
       
-      function loadFile(file) {
+      function loadFile(file, clear) {
          //var file = $('#glmol01_file').get(0);
          
-         if (file) {
-            //file = file.files;
-         }
-         else if (!file || !file[0]) {
+         if ((!file || !file[0]) && !clear) {
             alert("No file is selected.");
             return;
          }
