Bug Fix: Multiple File Upload
- Fixed bug: forgot to declare variables fName and fData when
   making a minor change
- NOTE: Discovered that drag-and-drop is enabled by default for
   view: uploader. Works with single and multiple files at once

Known Bugs:
1) Expanding the "Import Compounds" beyond table limit causes
    elements in pane below to get obscured (amount depends on
    how much the table has been expanded beyond the height limit)
2) Chrome won't accept uploads to iframes when just running Hydra
    locally.  Origins for the primary frame and iframe are both "null"
  -> same origin violation.
3) Chrome and Firefox won't display more than 16-17 molecular
    models even though the viewers themselves are still responsive.
  - "Error: WebGL: Exceeded 16 live WebGL contexts for this
    principal, losing the least recently used one."
  - This is due to limitations built into Three49custom.js

To Do:
- Bug fixes
- Pull mouse mode setting (eg "Rotate", "Translate", etc)
out of viewers. Universal control in Hydra GUI
- Replace "ID" in "Compound List" with coordinates

Misc (from before):
If the mouse is being used for compound manipulation and is moved
outside the viewer before release, the viewer will continue interacting
with the mouse whenever cursor is in its bounds until the viewer is
clicked again.  Consider making a global mouse state variable in the
future?

--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
 				var numFiles = 1+$$('uploader_1').files.getIndexById($$('uploader_1').files.getLastId());
 				console.log(numFiles);
 				var reader = new FileReader();
-				var fID;
+				var fID, fName, fData;
 				//var fID = $$("uploader_1").files.getFirstId();
 				for(var a=0; a<numFiles; a++){
 					fID = $$('uploader_1').files.getIdByIndex(a);
