Active Viewer Styling & Init VC Functionality
- Added code for adding border styling to the currently active viewer
  and for removing it from the previously active viewer
  - Works BUT does not display well due to problems with Webix GUI
- "Viewer Controls" now change to the match the values stored in the
  "active viewer"
- Structure and surface "Viewer Controls" now work
  - Not the cleanest implementation as if's had to be written for each
    possible selection...

To Do:
- Finish viewer selection style changes
- Make the border changes show up better
- Finish adding functionality to viewer controls
- Clean up interface by implementing "view:multiview"?
  - Clean up code by pulling controls' 'onChange' fxns into index.html
    - Will also allow fxns to be reused when writing ligand controls
      by simply passing a different index which the display settings
      which are currently arrays
- Make viewer control functions work with variables rather than having
  to specify every case
- Replace "ID" in "Compound List" with coordinates

Bugs to fix:
- Update 3Dmol.js to fix file displaying

Other, Known Bugs:
1) Chrome won't accept uploads to iframes when just running Hydra
locally.  Origins for the primary frame and iframe are both "null"
-> same origin violation.
2) Bug in Webix: resizer does not resize to cursor's location
3) WebGL won't display more than 16-17 molecular models
even though the viewers themselves are still responsive.
- "Error: WebGL: Exceeded 16 live WebGL contexts for this
principal, losing the least recently used one."
- This is due to limitations built into Three49custom.js

Misc (from before):
If the mouse is being used for compound manipulation and is moved
outside the viewer before release, the viewer will continue interacting
with the mouse whenever cursor is in its bounds until the viewer is
clicked again.  Consider making a global mouse state variable in the
future?

--- a/3Dmol frame.html
+++ b/3Dmol frame.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset='utf-8'>
 	<title>$3Dmol Example</title>
+	
+	<script src="codebase/jquery-2.1.4.min.js"></script>
 	<script src="codebase/3Dmol.js"></script>
 
 <style>
@@ -15,14 +17,52 @@ head, body {
 </style>
 </head>
 <body>
+	
 	<script type="text/javascript">
 	var glviewer = null;
 	var labels = [];
-
+	var surfaces = []; //0 index will be for main comp; 1 will be for any ligand
+	
+	//Display settings variables. Follow same indexing scheme as surfaces[]
+	var compDisplay = [];
+	var surfDisplay = [];
+	var surfOpacity = [];
+	var showAlphaCs = [];
+	
+	toDefaultDisp(); //Set initial values of the setting vars
+	
+	//Group of functions for working with the Hydra parent code
 	function setGridCoordinates(gc) {
          $('#webixID').html(gc); //Pass gc in to show between the div tags
          console.log("Coordinates set: "+gc);
    }
+	
+	//Set the default display settings for the viewer
+	//Eventually make a button to restore default settings -> call this
+	function toDefaultDisp() {
+		compDisplay[0] = 'Line';
+		compDisplay[1] = 'Line';
+		
+		surfDisplay[0] = 'surfNone';
+		surfDisplay[1] = 'surfNone';
+		
+		surfOpacity[0] = 90; //90% opaque by default (90% transparent)
+		surfOpacity[1] = 90;
+		
+		showAlphaCs[0]=0; //Webix checkboxes: 0->not checked, 1->checked. Not booleans
+		showAlphaCs[1]=0;
+	}
+	
+	function getViewMode() {
+		var viewSettings = []; //Pseudo 2D array for exporting viewer's settings
+			viewSettings[0] = compDisplay;
+			viewSettings[1] = surfDisplay;
+			viewSettings[2] = surfOpacity;
+			viewSettings[3] = showAlphaCs;
+		
+		return viewSettings;
+	}
+	
 	
 	var addLabels = function() {
 		var atoms = glviewer.getModel().selectedAtoms({
@@ -85,7 +125,8 @@ head, body {
 		glviewer = $3Dmol.createViewer("gldiv", {
 			defaultcolors : $3Dmol.rasmolElementColors
 		});
-		glviewer.setBackgroundColor(0xffffff);
+		glviewer.setBackgroundColor(0xffffff); //White background
+		glviewer.setBackgroundColor(0x000000);
 
 		receptorModel = m = glviewer.addModel(data, "pqr");
 
@@ -104,7 +145,7 @@ head, body {
 		//Fires when mouse button is pressed (before release) on anything within <html></html>
 		//Calls iframeClicked(...) in the Hydra UI to make this element selected
 		$(':root').mousedown(function(){
-			window.parent.iframeClicked($('#webixID').text());
+			window.parent.iframeClicked($('#webixID').text(), getViewMode());
 		});
 	});
 	</script>
