Controls for Opacity and Alpha C's
- Added functionality to opacity and alpha C controls
- Moved most event function code out into index.html
  - Required some modification of the other controls' code
- Changed default opacity to 95% from 90%

To Do:
- Finish viewer selection style changes
  - Make the border changes show up better
- Either allow alpha C labels to be removed or remove the control
- Clean up interface by implementing "view:multiview"?
- Make viewer control functions work with variables rather than having
to specify every case
  - Will allow it to work with ligands separately (hetatoms)
- Replace "ID" in "Compound List" with coordinates

Bugs to fix:
- Loading a new file does not reset the display options or make the
  new file get displayed with the same settings as the previous one

Other, Known Bugs:
1) Chrome won't accept uploads to iframes when just running Hydra
  locally.  Origins for the primary frame and iframe are both "null"
  -> same origin violation.
2) Bug in Webix: resizer does not resize to cursor's location
3) WebGL won't display more than 16-17 molecular models
  even though the viewers themselves are still responsive.
  - "Error: WebGL: Exceeded 16 live WebGL contexts for this
    principal, losing the least recently used one."
  - This is due to limitations built into Three49custom.js
4) Still some strangeness with magenta bond connections in models
   3Dmol is reading from docking output.  Very minor now though.

Misc (from before):
If the mouse is being used for compound manipulation and is moved
outside the viewer before release, the viewer will continue interacting
with the mouse whenever cursor is in its bounds until the viewer is
clicked again.  Consider making a global mouse state variable in the
future?

--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
 	   </div>
 			
 		<!--<script type="text/javascript" src="codebase/GLmol.js")></script>-->
+		<script src="webixUI.js" charset="utf-8"></script>
+		
 		<script type="text/javascript" charset="utf-8">
 		//Called by iframe if it is clicked, passed coordinates & view settings
 		function iframeClicked(activeCoord, viewSettings) {
@@ -79,11 +81,98 @@
 			webix.html.addCss($$('viewer'+activeCoord).$view, "activeViewer");
 			
 			$$('activeCoord').setValue(activeCoord);
-			//console.log($$('struct'+compDisplay[0]).getValue());
 			$$('structType').setValue('struct'+compDisplay[0]);
-			$$('surfType').setValue(surfDisplay[0]);
 			$$('surfOpacity').setValue(surfOpacity[0]);
+			$$('surfType').setValue(surfDisplay[0]);
+				//Because this references the value of surfOpacity when changed, it must be set
+				//only AFTER surfOpacity is set. Otherwise the default view:'slider' val
+				//pollutes the whole process
 			$$('alphaCs').setValue(showAlphaCs[0]);
+		}
+		
+		function setStruct(coord, listObj, structIndex){
+			var glviewer = $$('viewer'+coord).getWindow().glviewer;
+			var itemID = listObj.getValue();
+			var itemVal = listObj.getPopup().getList().getItem(itemID).value;
+			//var styleType = itemVal.toLowerCase();
+			
+			//glviewer.setStyle({},{styleType});
+			
+			//Ugly method. Try getting the variable method to work later...
+			if (itemVal == 'Cartoon')
+				glviewer.setStyle({hetflag:false},{cartoon:{color: 'spectrum'}});
+			else if (itemVal == 'Sphere')
+				glviewer.setStyle({},{sphere:{}});
+			else if (itemVal == 'Stick')
+				glviewer.setStyle({},{stick:{}});
+			else if (itemVal == 'Line')
+				glviewer.setStyle({},{line:{}});
+			else if (itemVal == 'Cross')
+				glviewer.setStyle({},{cross:{linewidth:5}});
+			
+			//NEED TO ALTER THIS TO WORK WITH HETATOMS/LIGANDS
+			
+			glviewer.render();
+			
+			//Store new setting in iframe
+			$$('viewer'+coord).getWindow().compDisplay[structIndex] = itemVal;
+		}
+		
+		function setSurface(coord, listObj, surfIndex, opacSet){
+			var iViewer = $$('viewer'+coord).getWindow();
+			var glviewer = iViewer.glviewer;
+			var itemID = listObj.getValue(); //ID of of the list item
+			var itemVal = listObj.getPopup().getList().getItem(itemID).value;
+				console.log(itemVal);
+				//What the list item actually displays
+				
+			if (iViewer.surfaces[surfIndex] != null) {
+				console.log('Removing surface');
+				glviewer.removeSurface(iViewer.surfaces[surfIndex]),
+				iViewer.lastsurfstyle = 1;
+			}
+			if (itemVal == 'Van der Waals') {
+				console.log('Adding VdW surface')
+				iViewer.surfaces[surfIndex] =
+					glviewer.addSurface(iViewer.$3Dmol.SurfaceType.VDW, {opacity:opacSet},
+					{hetflag:false,chain:'A'},{hetflag:false,chain:'A'});
+			}
+			else if (itemVal == 'Molecular') {
+				console.log('Adding molecular surface')
+				iViewer.surfaces[surfIndex] =
+					glviewer.addSurface(iViewer.$3Dmol.SurfaceType.MS, {opacity:opacSet},
+					{hetflag:false,chain:'A'},{hetflag:false,chain:'A'});
+			}
+			else if (itemVal == 'Solvent Accessible') {
+				console.log('Adding SA surface')
+				iViewer.surfaces[surfIndex] =
+					glviewer.addSurface(iViewer.$3Dmol.SurfaceType.SAS, {opacity:opacSet},
+					{hetflag:false,chain:'A'},{hetflag:false,chain:'A'});
+			}
+			else if (itemVal == 'Solvent Excluded') {
+				console.log('Adding SE surface')
+				iViewer.surfaces[surfIndex] =
+					glviewer.addSurface(iViewer.$3Dmol.SurfaceType.SES, {opacity:opacSet},
+					{hetflag:false,chain:'A'},{hetflag:false,chain:'A'});
+			}
+			
+			iViewer.surfDisplay[surfIndex] = itemID;
+			iViewer.surfOpacity[surfIndex] = opacSet*100; //surfOpacity stores values of the slider
+		}
+		
+		function setAlphaCs(coord, boxVal, index, dispOptns) {
+			var iViewer = $$('viewer'+coord).getWindow();
+			var glviewer = iViewer.glviewer;
+			
+			if (boxVal == 1){
+				iViewer.addLabels(glviewer);
+				glviewer.render();
+			}
+			else if (boxVal == 0) {
+				glviewer.removeAllLabels();
+			}
+			
+			iViewer.showAlphaCs[index] = boxVal;
 		}
 		
 		// script modified from http://www.amcharts.com/tutorials/loading-external-data/
@@ -219,6 +308,5 @@
 		
 		
       </script>
-		<script src="webixUI.js" charset="utf-8"></script>
 	</body>
 </html>
