--- a/3Dmol frame.html
+++ b/3Dmol frame.html
@@ -8,11 +8,11 @@
 	<script src="codebase/3Dmol.js"></script>
 
 <style>
-	head, body {
+	body {
 		margin: 0;
 		border: 0;
 		padding: 0;
-		max-height: 100vh
+		width:100vw; height:100vh;
 	}
 	.text{
 		color:white;
@@ -167,7 +167,7 @@
 	});
 	</script>
 	
-	<div id="gldiv" style="width: 100%; height: 100vh;"></div>
+	<div id="gldiv" style="width: 100%; height: 100%;"></div>
 	
 	<div id='compoundTitle' class='text' style="position:aboslute; left:0; top:0;"></div>
 	
